# datalogger-to-ml

./: .gitignore  .pylintrc  DeviceList.csv  Makefile  PerformanceEvaluation.md  README.md  README.txt  config.yaml  dpmData.profile  dpmData.py  dpm_data.py  h5_dump.py  h5_validator.py  helperMethods.py  helper_methods.py  nanny.py  old_data_collector.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
datalogger_to_ml/: __init__.py  __main__.py  h5_dump.py  h5_validator.py  helper_methods.py  nanny.py  old_data_collector.py
datalogger_to_ml/dpm_data/: __init__.py  __main__.py  dpm_data.py
tests/: daily_plot.py  dpm_data_test.py
