[tool.poetry]
name = 'datalogger-to-ml'
version = '1.0.0'
description = 'Command line tool for extracting and saving Fermi control system historical data.'
authors = ['Beau Harrison <beau@fnal.gov>']
readme = 'README.md'

[tool.poetry.scripts]
datalogger-to-ml = 'datalogger_to_ml.__main__:main'

[[tool.poetry.source]]
name = 'fermi'
url = 'https://www-bd.fnal.gov/pip3/'

[tool.poetry.dependencies]
python = '^3.6.8'
pandas = '^1.1.5'
requests = '^2.25.1'
isodate = '^0.6.0'
pytz = '^2021.1'
backports-datetime-fromisoformat = '^1.0.0'
PyYAML = '^5.4.1'
acsys = '^0.9.11'

[tool.poetry.dev-dependencies]
pytest = '^6.2.2'
flake8 = '^3.9.0'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
